MDEV-7426 - federated.federated_server fails

Fixed error path of close_cached_connection_tables() to unlock mutex.